# PRODUCT

./: .gitignore  Dockerfile  architecture.txt  category_update_routes.txt  cms_docs.txt  docker-compose.yml  events.txt  main.py  manufacturer_update_routes.txt  product_routes.txt  product_type_update_routes.txt  pyproject.toml  rec_sprc.md  regions_api_spec.md  review_api_spec.md  spec.md  update_api.md  ТЗ.txt
.github/workflows/: master.yml
.qwen/: settings.json
alembic/: env.py
alembic/versions/: 0002_create_upload_history.py  0458fd3e98c1_add_tags.py  0ed59f4f4c80_add_attr_products.py  10883a3126bb_add_attr_products.py  1483ef328d48_add_cms.py  199fe24ccdd8_add_fio_to_audit_tables.py  1a18a819b42a_add_attr_products.py  2a1b8a3eda20_init.py  30f29f06eee8_add_cms.py  495d7f879eef_add_attr_products23.py  4b2a137067f5_add_pricing_policy_audit_logs_py.py  4e1ebb4de7c0_add_ordering_to_product_images.py  5d49ed36226f_add_audit.py  5e19874b2326_add_review.py  6110326791bb_add_attr_products2.py  737ae7b1a16d_add_phone.py  77fea243383d_add_regions.py  7edc74a64060_add_pricing_policy_audit_logs_py.py  85a0ea4f50b7_add_review.py  8c5fd2dd4c3e_add_supplier_audit.py  956936928696_add_product_type_image.py  a0a1af2dc7d6_init.py  a0d71df486f4_add_audit.py  a2c8b26ded9c_add_groupble.py  a57126fab9cf_move_device_type_from_products_to_.py  a760c7a56410_add_pricing_policy_audit_logs_py.py  ad5e31c22caa_add_tags_color.py  af7b8ae1e6a8_add_attr_products.py  b30e278ddd8d_add_cms.py  b4f2d8c9e1a7_add_category_images_and_audit.py  ba0dcf155658_add_cms.py  c6f3a2d1b9e4_add_ordering_to_category_images.py  c7069a396931_init.py  dc2acfb45d59_add_attr_products.py  e310995592cd_add_attr_products.py  f071f585f12e_init.py  f339655cb07f_add_review.py
deploy/dev/: dev_entrypoint.sh
deploy/prod/: prod_entrypoint.sh
deploy/tests/: test_entrypoint.sh
docs/: ARCHITECTURE_AUDIT.md  MANUFACTURER_REFACTORING_SUMMARY.md  catalog_filtering.md  qwen.txt  tags_api_spec.md
scripts/: redis_pubsub_consumer.py
src/: mount.py  mount_models.py
src/cms/: __init__.py  api_module.py  composition.py  container.py
src/regions/: api_module.py  composition.py  container.py
src/uploads/: api_module.py  composition.py
tests/: conftest.py
tests/category_pricing_policy/: __init__.py
tests/cms/: conftest.py
tests/review/: conftest.py
(+539 files in other folders)
